fixed sticky positioning, removed title from tabnavigation, disabled scrollbar appearance

--- a/src/index.css
+++ b/src/index.css
@@ -95,13 +95,11 @@ button:focus {
 }
 
 ::-webkit-scrollbar {
-  width: 8px;
-  background: hsl(var(--muted));
+  display: none;
 }
 ::-webkit-scrollbar-thumb {
-  background: hsl(var(--muted-foreground));
-  border-radius: 6px;
+  display: none;
 }
 ::-webkit-scrollbar-thumb:hover {
-  background: hsl(var(--primary));
+  display: none;
 }
